root/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap');

* {
    margin: 0;
    padding: 0;
}

body {
    background-color: #4BB;
    font-family: 'Roboto Mono', monospace;
    color: rgb(243, 233, 210);
    margin: 0;
    -ms-overflow-style: none;
    scrollbar-width: none;
    margin-bottom: 20px;
}

body::-webkit-scrollbar {
    display: none;
}

hr {
    align-self: center;
    margin: auto;
    height: 2px;
    background-color: rgb(243, 233, 210);
    box-shadow: 6px 3px 3px #006;
}

#animation {
    position: fixed;
    z-index: -1;
}

.content {
    width: 65%;
    max-width: 1000px;
    position: relative;
    margin: auto;
}

a {
    text-decoration: none !important;
    color: rgb(243, 233, 210);
}

.intro-code pre {
    border: white 1px solid;
}

code {
    white-space: normal;
}

.icons {
    padding-top: 15px;
    display: flex;
    justify-content: center;
    text-shadow: 2px 3px 3px #006;
    font-size: 30px;
}

.icons i {
    margin-left: 17px;
    margin-right: 5px;
    color: rgb(243, 233, 210);
    font-size: 35px;
}

.icons p {
    display: none;
}

.icons p:hover {
    cursor: pointer;
    color: #0056b3;
}

.intro-code {
    margin: auto;
    padding-top: 10px;
}

.name {
    color: rgb(243, 233, 210);
    font-size: 80px;
    text-shadow: 6px 3px 3px #006;
    margin: auto;
    padding-top: 30px;
    text-align: center;
}

.typed-cursor {
    color: rgb(243, 233, 210);
    font-size: 20px;
}

.section-title {
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin-left: auto;
    margin-right: auto;
    color: #006;
    margin-bottom: 15px;
}

.section-container {
    background-color: rgb(243, 233, 210);
    border-radius: 10px;
    padding: 15px 15px 0px 15px;
    margin-top: 20px;
}

.section-container a {
    color: black;
    text-decoration: underline dotted black !important;
}

.section-container p a {
    color: #006;
    text-decoration: underline dotted #006 !important;
}

.page-section {
    color: rgb(243, 233, 210);
    margin-bottom: 0;
}

.underline {
    text-decoration: underline;
}

#controls {
    display: none;
    padding: 5px;
    position: absolute;
    left: 50%;
}

#controls button {
    border-radius: 5px;
    padding: 2px;
    left: -50%;
    position: relative;
}

#experience ul {
    margin-left: 15px;
}

#gform input {
    border: none;
    border-radius: 5px;
}

#gform textarea {
    border: none;
    width: 100%;
    height: 150px;
    border-radius: 10px;
    resize: none;
}

#gform {
    padding-bottom: 10px;
    align-items: center;
}

#gform button {
    padding: 5px;
    border-radius: 6px;
    align-self: center;
    color: white;
    background: #006;
    border: none;
}

@media only screen and (max-width: 650px) {

    .content {
        width: 90%;
    }

    hr {
        width: 90%;
    }

    .header {
        text-align: center;
        padding: 2% 2% 0 2%;
    }

    .name {
        text-align: center;
    }

    .intro-code {
        width: 90%;
    }

    .icons {
        display: flex;
        flex-wrap: wrap;
    }

    .projects {
        width: 90%;
    }
}

